--- a/css/responsive.css
+++ b/css/responsive.css
@@ -101,9 +101,7 @@
         font-size: 41px;
     }
     .inner_page .logo {
-        text-align: center !important;
-        float: inherit;
-        margin: 0 auto;
+        margin-left: 57%;
     }
     .doi {
         margin-top: 30px;
@@ -169,14 +167,12 @@
         text-align: center !important;
         padding-bottom: 6px;
         float: left;
-        width: 149px;
+        width: 120px;
         margin: 0 auto;
         display: block;
     }
     .inner_page .logo {
-        text-align: center !important;
-        float: inherit;
-        margin: 0 auto;
+       margin-left: 50%;
     }
     .cuplle h3 {
         font-size: 26px;
@@ -242,5 +238,23 @@
     }
     .d_none {
         display: none;
+    }
+}
+
+@media (max-width: 411px) {
+    .inner_page .logo{
+        margin-left: 39%;
+    }
+}
+
+@media (max-width: 285px) {
+    .inner_page .logo{
+        margin-left: 16%;
+    }
+}
+
+@media (max-width: 240px) {
+    .inner_page .logo{
+        margin-left: 1%;
     }
 }
