--- a/css/style.css
+++ b/css/style.css
@@ -243,7 +243,7 @@ button {
 }
 
 .full {
-     width: 100%;
+     width: 70%;
      float: left;
      margin: 0;
      padding: 0;
@@ -283,18 +283,22 @@ button {
 
 .top_section {
      width: 100%;
-     padding: 34px 30px;
+     padding: 10px 30px;
      position: absolute;
      z-index: 888;
 }
 
 .header {
-     padding: 40px 16px;
+     padding: 20px 16px;
      background: #021626;
      color: #f1f1f1;
      width: 100%;
      z-index: 9999999;
-     height: 107px;
+     height: 67px;
+
+      box-shadow: 0px 0px 6px 0px #fbc50a;
+      margin-bottom: 10px;
+      
 }
 
 .content {
@@ -367,7 +371,7 @@ button {
 /** banner section **/
 
 .full_bg {
-     background: url(../images/banner1.jpg);
+     background: url(../images/pan5.jpeg);
      background-size: cover;
      background-position: center;
      background-repeat: no-repeat;
@@ -430,10 +434,18 @@ button {
 }
 
 
+
+.video{
+     width: 360px;
+    height: 269px;
+    /* position: absolute;
+    z-index: 1; */
+}
+
 /** about section **/
 
 .about {
-     background: url(../images/about_bg.jpg);
+     background: url(../images/gallery_bg.jpg);
      background-size: 100% 100%;
      background-position: center;
      background-repeat: no-repeat;
@@ -461,6 +473,7 @@ button {
 .about_img figure img {
      width: 100%;
      box-shadow: 0 0 49px rgba(22, 22, 23, 0.52);
+     /* box-shadow: 0px 0px 6px 0px #fbc50a; */
 }
 
 .about .read_more {
@@ -709,6 +722,7 @@ button {
      width: 100%;
 }
 
+
 label {
      color: #fff;
      font-size: 17px;
@@ -787,6 +801,7 @@ label {
 .logof {
      text-align: left;
      display: block;
+     width: 60%;
 }
 
 
@@ -1032,13 +1047,13 @@ ul.social_icon li a i:hover {
 }
 
 #carouselExampleIndicators .carousel-control-prev {
-     top: 25%;
+     top: 100%;
      left: inherit;
-     right: 8%;
+     right: 25%;
 }
 
 #carouselExampleIndicators .carousel-control-next {
-     top: 47%;
+     top: 100%;
      right: 10%;
 }
 
@@ -1066,7 +1081,7 @@ background:#021626db;
 }
 
 .inner_page .logo {
-     text-align: center;
+     margin-left: 62%;
 }
 
 
